# sdlgame

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  game.cpp  game.h  main.cpp  sprite.cpp  sprite.h
chapter1/: CMakeLists.txt
chapter1/src/: game.cpp  game.h
chapter2/: CMakeLists.txt
chapter2/src/: game.cpp  game.h  main.cpp  textureManager.cpp  textureManager.h
chapter3/: CMakeLists.txt
chapter3/src/: SDLGameObject.cpp  SDLgameObject.h  enemy.cpp  enemy.h  game.cpp  game.h  gameObject.h  loaderParams.h  main.cpp  player.cpp  player.h  textureManager.h
shader/: colorShading.vert
src/: game.h  main.c
src/chpt1/: game.c
src/chpt2/: game.c  game.h  list.c  list.h  main.c  texture.c
src/chpt3/: game.c  game.h  gameobj.c  input.c  list.c  main.c
